<resources>
    <string name="app_name">nolsatu_android</string>
    <string name="increase_counter">Increase Counter</string>
    <string name="login">Login</string>
    <string name="input_your_email">Input Your Email</string>
    <string name="input_your_password">Input Your Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_an_account_yet">don\'t have an account yet ?</string>
    <string name="register">Register</string>
    <string name="title_home">Home</string>
    <string name="title_verifikasi">Verifikasi</string>
    <string name="title_kontak">Kontak</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="login_failed">Login Gagal</string>
    <string name="internal_server_error_message">Terjadi Kesalahan Pada Server</string>
    <string name="internal_server_error_code">internal_server_error</string>
    <string name="forgot_pasword">Forgot Pasword</string>
    <string name="password">Password</string>
    <string name="btech">Btech</string>
    <string name="username">Username</string>
    <string name="proceed_with_your">Proceed With Your</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="first_name">First Name</string>
    <string name="ex_denny">ex : Denny</string>
    <string name="last_name">Last Name</string>
    <string name="ex_bin_cagur">ex : bin cagur</string>
    <string name="ex_0808_0808_0808">ex : 0808 - 0808 - 0808 - 0808</string>
    <string name="linkedin">Linkedin</string>
    <string name="www_linkedin_com_profile">www.linkedin.com/profile</string>
    <string name="git_repo">Git Repo</string>
    <string name="ex_www_github_com_repo">ex : www.github.com/repo</string>
    <string name="blog">Blog :</string>
    <string name="ex_www_blog_com_blog">ex : www.blog.com/blog</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_com_profle">@denny</string>
    <string name="instagram">Instagram</string>
    <string name="twiter">Twiter</string>
    <string name="telegram">Telegram :</string>
</resources>
