<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/putih"
            android:orientation="vertical"
            tools:context=".screen.login.LoginFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:background="@color/putih"
                  android:padding="20dp"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <ImageView android:layout_width="200dp"
                   android:layout_height="200dp"
                   android:src="@drawable/logonolsatu"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/proceed_with_your"
                  android:layout_marginTop="30dp"
                  android:textSize="40sp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/login"
                  android:textSize="30sp"
                  android:layout_marginBottom="40dp"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginTop="30dp"/>

        <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_account_circle_black_24dp"
                android:hint="@string/btech"/>

        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

        <EditText
                android:inputType="textPassword"
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btnLogin"
                android:layout_margin="@dimen/m10dp"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/radiuscornerbtn"
                android:textColor="@color/putih"/>

        <TextView
                android:id="@+id/textForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pasword"
                android:gravity="center"/>
        <TextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:gravity="center"/>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"/>

    </LinearLayout>

</ScrollView>